# fastpeoplesearch

./: .gitignore  README.md  pyproject.toml
fastpeoplesearch/: proxy_auto.py  schedule_run.py  server.py
fastpeoplesearch/Client_side/: ogrn.xlsx
fastpeoplesearch/flask_app/: __init__.py
fastpeoplesearch/flask_app/config/: __init__.py  mysqlconnection.py
fastpeoplesearch/flask_app/controllers/: criminal.py  federal.py  fet_not_pal.py  inn.py  interpol.py  network.py  no_trust.py  notariat.py  ogrn.py  other.py  pasport.py  suspected.py
fastpeoplesearch/flask_app/models/: Criminal.py  Federal.py  Fet_not_pal.py  InnModel.py  Interpol.py  Notariat.py  Suspected_of_crimes.py  __init__.py  interpol.json  ogrnMod.py  test.ipynb  test.py  test2.py
fastpeoplesearch/flask_app/models/schedule_download/: data_analysis.py  download_schedule.py  no_trust_schedule.py  tests.ipynb
fastpeoplesearch/flask_app/models/schedule_download/.ipynb_checkpoints/: tests-checkpoint.ipynb
fastpeoplesearch/flask_app/static/css/: style.css
fastpeoplesearch/flask_app/templates/: analisepasport.html  criminal_input.html  criminal_result.html  federal.html  fet_not_pal.html  get_fet_not_pal.html  get_inn.html  get_trust.html  index.html  inn.html  interpol.html  no_trust.html  notariat.html  notariat_get.html  ogrn.html  pasport.html  resfederal.html  resinterpol.html  ressuspected.html  suspected.html
